// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render AdminListFilters with data 1`] = `
<div
  className="content-container"
>
  <div
    className="input-group"
  >
    <div
      className="input-group__item"
    >
      <input
        className="text-input"
        onChange={[Function]}
        placeholder="Search products"
        type="text"
        value="men shoe"
      />
    </div>
    <div
      className="input-group__item"
    >
      <select
        className="select"
        onChange={[Function]}
        value="amount"
      >
        <option
          value="date"
        >
          Date
        </option>
        <option
          value="amount"
        >
          Amount
        </option>
      </select>
    </div>
    <div
      className="input-group__item"
    >
      <select
        className="select"
        onChange={[Function]}
        value="men"
      >
        <option
          value=""
        >
          Select Category
        </option>
        <option
          value="boy"
        >
          Boy
        </option>
        <option
          value="girl"
        >
          Girl
        </option>
        <option
          value="amen"
        >
          Men
        </option>
        <option
          value="women"
        >
          Women
        </option>
      </select>
    </div>
    <div
      className="input-group__item"
    >
      <select
        className="select"
        onChange={[Function]}
        value="men_footwear"
      >
        <option
          value=""
        >
          Select Item
        </option>
        <option
          value="boy_bag"
        >
          Boy Bag
        </option>
        <option
          value="boy_belt"
        >
          Boy Belt
        </option>
        <option
          value="boy_clothe"
        >
          Boy Clothe
        </option>
        <option
          value="boy_footwear"
        >
          Boy Footwear
        </option>
        <option
          value="boy_headwear"
        >
          Boy Headwear
        </option>
        <option
          value="boy_jewellery"
        >
          Boy Jewellery
        </option>
        <option
          value="boy_tie"
        >
          Boy Tie
        </option>
        <option
          value="boy_underwear"
        >
          Boy Underwear
        </option>
        <option
          value="girl_bag"
        >
          Girl Bag
        </option>
        <option
          value="girl_belt"
        >
          Girl Belt
        </option>
        <option
          value="girl_clothe"
        >
          Girl Clothe
        </option>
        <option
          value="girl_footwear"
        >
          Girl Footwear
        </option>
        <option
          value="girl_headwear"
        >
          Girl Headwear
        </option>
        <option
          value="girl_jewellery"
        >
          Girl Jewellery
        </option>
        <option
          value="girl_tie"
        >
          Girl Tie
        </option>
        <option
          value="girl_underwear"
        >
          Girl Underwear
        </option>
        <option
          value="men_bag"
        >
          Men Bag
        </option>
        <option
          value="men_belt"
        >
          Men Belt
        </option>
        <option
          value="men_clothe"
        >
          Men Clothe
        </option>
        <option
          value="men_footwear"
        >
          Men Footwear
        </option>
        <option
          value="men_headwear"
        >
          Men Headwear
        </option>
        <option
          value="men_jewellery"
        >
          Men Jewellery
        </option>
        <option
          value="men_tie"
        >
          Men Tie
        </option>
        <option
          value="men_underwear"
        >
          Men Underwear
        </option>
        <option
          value="wommen_bag"
        >
          Women Bag
        </option>
        <option
          value="wommen_belt"
        >
          Women Belt
        </option>
        <option
          value="wommen_clothe"
        >
          Women Clothe
        </option>
        <option
          value="wommen_footwear"
        >
          Women Footwear
        </option>
        <option
          value="wommen_headwear"
        >
          Women Headwear
        </option>
        <option
          value="wommen_jewellery"
        >
          Women Jewellery
        </option>
        <option
          value="wommen_tie"
        >
          Women Tie
        </option>
        <option
          value="wommen_underwear"
        >
          Women Underwear
        </option>
      </select>
    </div>
  </div>
  <div
    className="input-group"
  >
    <div
      className="input-group__item"
    >
      <DateRangePicker
        anchorDirection="left"
        customArrowIcon={null}
        customCloseIcon={null}
        customInputIcon={null}
        daySize={39}
        disabled={false}
        displayFormat={[Function]}
        enableOutsideDays={false}
        endDate={"1970-01-03T00:00:00.000Z"}
        endDateId="endDate"
        endDatePlaceholderText="End Date"
        firstDayOfWeek={null}
        focusedInput={null}
        hideKeyboardShortcutsPanel={false}
        horizontalMargin={0}
        initialVisibleMonth={null}
        isDayBlocked={[Function]}
        isDayHighlighted={[Function]}
        isOutsideRange={[Function]}
        isRTL={false}
        keepOpenOnDateSelect={false}
        minimumNights={1}
        monthFormat="MMMM YYYY"
        navNext={null}
        navPrev={null}
        numberOfMonths={1}
        onClose={[Function]}
        onDatesChange={[Function]}
        onFocusChange={[Function]}
        onNextMonthClick={[Function]}
        onPrevMonthClick={[Function]}
        orientation="horizontal"
        phrases={
          Object {
            "chooseAvailableEndDate": [Function],
            "chooseAvailableStartDate": [Function],
            "clearDates": "Clear Dates",
            "closeDatePicker": "Close",
            "dateIsUnavailable": [Function],
            "enterKey": "Enter key",
            "escape": "Escape key",
            "focusStartDate": "Interact with the calendar and add the check-in date for your trip.",
            "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
            "homeEnd": "Home and end keys",
            "jumpToNextMonth": "Move forward to switch to the next month",
            "jumpToPrevMonth": "Move backward to switch to the previous month",
            "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
            select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
            "keyboardShortcuts": "Keyboard Shortcuts",
            "leftArrowRightArrow": "Right and left arrow keys",
            "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
            "moveFocusByOneMonth": "Switch months",
            "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
            "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
            "openThisPanel": "Open this panel",
            "pageUpPageDown": "page up and page down keys",
            "questionMark": "Question mark",
            "returnFocusToInput": "Return to the date input field",
            "selectFocusedDate": "Select the date in focus",
            "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
            "upArrowDownArrow": "up and down arrow keys",
          }
        }
        readOnly={false}
        renderCalendarInfo={null}
        renderDay={null}
        renderMonth={null}
        reopenPickerOnClearDates={false}
        required={false}
        screenReaderInputMessage=""
        showClearDates={true}
        showDefaultInputIcon={false}
        startDate={"1970-01-01T00:00:00.000Z"}
        startDateId="startDate"
        startDatePlaceholderText="Start Date"
        withFullScreenPortal={false}
        withPortal={false}
      />
    </div>
  </div>
</div>
`;

exports[`should render AdminListFilters with default data 1`] = `
<div
  className="content-container"
>
  <div
    className="input-group"
  >
    <div
      className="input-group__item"
    >
      <input
        className="text-input"
        onChange={[Function]}
        placeholder="Search products"
        type="text"
        value=""
      />
    </div>
    <div
      className="input-group__item"
    >
      <select
        className="select"
        onChange={[Function]}
        value="date"
      >
        <option
          value="date"
        >
          Date
        </option>
        <option
          value="amount"
        >
          Amount
        </option>
      </select>
    </div>
    <div
      className="input-group__item"
    >
      <select
        className="select"
        onChange={[Function]}
        value=""
      >
        <option
          value=""
        >
          Select Category
        </option>
        <option
          value="boy"
        >
          Boy
        </option>
        <option
          value="girl"
        >
          Girl
        </option>
        <option
          value="amen"
        >
          Men
        </option>
        <option
          value="women"
        >
          Women
        </option>
      </select>
    </div>
    <div
      className="input-group__item"
    >
      <select
        className="select"
        onChange={[Function]}
        value=""
      >
        <option
          value=""
        >
          Select Item
        </option>
        <option
          value="boy_bag"
        >
          Boy Bag
        </option>
        <option
          value="boy_belt"
        >
          Boy Belt
        </option>
        <option
          value="boy_clothe"
        >
          Boy Clothe
        </option>
        <option
          value="boy_footwear"
        >
          Boy Footwear
        </option>
        <option
          value="boy_headwear"
        >
          Boy Headwear
        </option>
        <option
          value="boy_jewellery"
        >
          Boy Jewellery
        </option>
        <option
          value="boy_tie"
        >
          Boy Tie
        </option>
        <option
          value="boy_underwear"
        >
          Boy Underwear
        </option>
        <option
          value="girl_bag"
        >
          Girl Bag
        </option>
        <option
          value="girl_belt"
        >
          Girl Belt
        </option>
        <option
          value="girl_clothe"
        >
          Girl Clothe
        </option>
        <option
          value="girl_footwear"
        >
          Girl Footwear
        </option>
        <option
          value="girl_headwear"
        >
          Girl Headwear
        </option>
        <option
          value="girl_jewellery"
        >
          Girl Jewellery
        </option>
        <option
          value="girl_tie"
        >
          Girl Tie
        </option>
        <option
          value="girl_underwear"
        >
          Girl Underwear
        </option>
        <option
          value="men_bag"
        >
          Men Bag
        </option>
        <option
          value="men_belt"
        >
          Men Belt
        </option>
        <option
          value="men_clothe"
        >
          Men Clothe
        </option>
        <option
          value="men_footwear"
        >
          Men Footwear
        </option>
        <option
          value="men_headwear"
        >
          Men Headwear
        </option>
        <option
          value="men_jewellery"
        >
          Men Jewellery
        </option>
        <option
          value="men_tie"
        >
          Men Tie
        </option>
        <option
          value="men_underwear"
        >
          Men Underwear
        </option>
        <option
          value="wommen_bag"
        >
          Women Bag
        </option>
        <option
          value="wommen_belt"
        >
          Women Belt
        </option>
        <option
          value="wommen_clothe"
        >
          Women Clothe
        </option>
        <option
          value="wommen_footwear"
        >
          Women Footwear
        </option>
        <option
          value="wommen_headwear"
        >
          Women Headwear
        </option>
        <option
          value="wommen_jewellery"
        >
          Women Jewellery
        </option>
        <option
          value="wommen_tie"
        >
          Women Tie
        </option>
        <option
          value="wommen_underwear"
        >
          Women Underwear
        </option>
      </select>
    </div>
  </div>
  <div
    className="input-group"
  >
    <div
      className="input-group__item"
    >
      <DateRangePicker
        anchorDirection="left"
        customArrowIcon={null}
        customCloseIcon={null}
        customInputIcon={null}
        daySize={39}
        disabled={false}
        displayFormat={[Function]}
        enableOutsideDays={false}
        endDate={"1970-01-03T00:00:00.000Z"}
        endDateId="endDate"
        endDatePlaceholderText="End Date"
        firstDayOfWeek={null}
        focusedInput={null}
        hideKeyboardShortcutsPanel={false}
        horizontalMargin={0}
        initialVisibleMonth={null}
        isDayBlocked={[Function]}
        isDayHighlighted={[Function]}
        isOutsideRange={[Function]}
        isRTL={false}
        keepOpenOnDateSelect={false}
        minimumNights={1}
        monthFormat="MMMM YYYY"
        navNext={null}
        navPrev={null}
        numberOfMonths={1}
        onClose={[Function]}
        onDatesChange={[Function]}
        onFocusChange={[Function]}
        onNextMonthClick={[Function]}
        onPrevMonthClick={[Function]}
        orientation="horizontal"
        phrases={
          Object {
            "chooseAvailableEndDate": [Function],
            "chooseAvailableStartDate": [Function],
            "clearDates": "Clear Dates",
            "closeDatePicker": "Close",
            "dateIsUnavailable": [Function],
            "enterKey": "Enter key",
            "escape": "Escape key",
            "focusStartDate": "Interact with the calendar and add the check-in date for your trip.",
            "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
            "homeEnd": "Home and end keys",
            "jumpToNextMonth": "Move forward to switch to the next month",
            "jumpToPrevMonth": "Move backward to switch to the previous month",
            "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
            select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
            "keyboardShortcuts": "Keyboard Shortcuts",
            "leftArrowRightArrow": "Right and left arrow keys",
            "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
            "moveFocusByOneMonth": "Switch months",
            "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
            "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
            "openThisPanel": "Open this panel",
            "pageUpPageDown": "page up and page down keys",
            "questionMark": "Question mark",
            "returnFocusToInput": "Return to the date input field",
            "selectFocusedDate": "Select the date in focus",
            "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
            "upArrowDownArrow": "up and down arrow keys",
          }
        }
        readOnly={false}
        renderCalendarInfo={null}
        renderDay={null}
        renderMonth={null}
        reopenPickerOnClearDates={false}
        required={false}
        screenReaderInputMessage=""
        showClearDates={true}
        showDefaultInputIcon={false}
        startDate={"1970-01-01T00:00:00.000Z"}
        startDateId="startDate"
        startDatePlaceholderText="Start Date"
        withFullScreenPortal={false}
        withPortal={false}
      />
    </div>
  </div>
</div>
`;
